sec-groups.tf
#Creating Security Group for EC2
resource "aws_security_group" "acp_ec2_sec" {
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.vpc-project.id

#Creating Inbound Rules
  ingress {
    description      = "Allow HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

   ingress {
    description      = "Allow SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

   ingress {
    description      = "Allow HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.sec_group
  }
}



#Creating Security Group for Application Load Balancer
resource "aws_security_group" "alb_security_group" {
  description = "Application load balancer security group"
  vpc_id      = aws_vpc.vpc-project.id

#Creating Inbound Rules
  ingress {
    description      = "Allow HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }


  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.sec_group
  }
}

#Creating Security Group for RDS
